--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "1_friday",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://Alekskarb.github.io/Pop_tasks",
+  "homepage": "https://Alekskarb.github.io/Pop_tasks",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,8 +11,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
